# sm64-fst-brute-forcer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CLCompile.cmake  CompilerConfig.cmake  ScriptArgs.cmake  SparseCheckout.cmake
platform_tilt_brute_forcer/platform_tilt_brute_forcer/: CMakeLists.txt  FST.cpp  FST.hpp  Surface.hpp  Trig.cpp  config.cl  constants.cl  constants.h.cl  geo.cl  geo.h.cl  globals.cl  globals.h.cl  main.cl  main.cpp  main.cu  platform_tilt_brute_forcer.vcxproj  platform_tilt_brute_forcer.vcxproj.filters  solver.cl  solver.h.cl  solver_tables.cl  solvers.cl  stick.h.cl  structs.cl  structs.h.cl  test.cl  trig.cl  trig.h.cl  utils.cl  utils.h.cl
src/: BoundaryDistance.cpp  CLLoader.cpp  CLLoader.hpp  CMakeLists.txt  Platform.hpp  SolutionWriter.cpp  SolutionWriter.hpp  Surface.hpp  constants.cl  constants.h.cl  globals.cl  globals.h.cl  main.cl  main.cpp  solvers.h.cl  structs.h.cl  utils.cl  utils.h.cl  vmath.hpp
table_gen/: mag_set.cl  mag_set.py  reverse_arctan.cl  reverse_arctan.py
toolchains/: arch-linux-oneapi.cmake  linux-oneapi.cmake
